Add site info 👅

--- a/index.html
+++ b/index.html
@@ -52,69 +52,73 @@
 
 <body>
 
-<main id="home-ete">
-    <div class="content affiche">
-        <div id="poster-ete"></div>
-    </div>
-    <div class="content edito">
-        <img src="programme/prog-1.jpg"/>
-        <hr>
-        <img src="programme/prog-2.jpg"/>
-        <hr>
-        <img src="programme/prog-3.jpg"/>
-        <hr>
-        <img src="programme/prog-4.jpg"/>
-    </div>
-</main>
+<div>
 
-<main class="event">
 
-    <div id="lnk-event-expo-0"></div>
+    <main id="home-ete">
+        <div class="content affiche">
+            <div class="bar">Le Signe sera fermé<br>le jeudi 15 août !</div>
+            <div id="poster-ete"></div>
+        </div>
+        <div class="content edito">
+            <img src="programme/prog-1.jpg"/>
+            <hr>
+            <img src="programme/prog-2.jpg"/>
+            <hr>
+            <img src="programme/prog-3.jpg"/>
+            <hr>
+            <img src="programme/prog-4.jpg"/>
+        </div>
+    </main>
 
-    <div class="section-img">
-        <img src="photos/opt/expo-locomotion.jpg"/>
-    </div>
+    <main class="event">
 
-    <section class="flex">
+        <div id="lnk-event-expo-0"></div>
 
-        <header class="event-what">
-
-            <h1>Locomotions I</h1>
-
-            <p>Concevoir les modalités de <br>déplacements individuels par l’affiche.</p>
-
-            <h2>01.08 au<br>20.10</h2>
-
-            <div class="lieux"><p>Le Signe</p></div>
-
-            <div class="sub-header">
-
-                <div>
-                    <p><span class="title">Commisariat</span>
-                        Virginie Vignon
-                    </p>
-                </div>
-                <div>
-                    <p><span class="title">Scénographie</span>
-                        Pernelle Poyet
-                    </p>
-                </div>
-            </div>
-
-        </header>
-
-        <div class="content">
-
-            <p>L’exposition d'été du Signe, centre national du graphisme, invite à découvrir comment l'affiche s'est emparée de la question des transports et des modes de déplacement individuels à travers les affiches anciennes et contemporaines des collections de la Ville de Chaumont, tandis que les transports collectifs feront l'objet d'une exposition à part entière à l'été 2020.</p>
-            <p>De la marche à pied pratiquée depuis les origines de l'humanité jusqu'à l'automobile reine de la fin du XXe siècle, en passant par le cheval ou le vélo, les moyens de locomotions individuels, qu'ils soient musculaires ou motorisés, répondent à des besoins et soulèvent des enjeux que les affichistes ont su révéler : la vitesse, les infrastructures, la santé et l'environnement, les loisirs et le tourisme sont autant de questions abordées dans le parcours chronologique et thématique de l'exposition.</p>
-            <p>Des visites commentées de Locomotions I sont prévues les dimanches 4 et 25 août à 15h (durée 1h).</p>
-
+        <div class="section-img">
+            <img src="photos/opt/expo-locomotion.jpg"/>
         </div>
 
-    </section>
+        <section class="flex">
 
-</main>
+            <header class="event-what">
 
+                <h1>Locomotions I</h1>
+
+                <p>Concevoir les modalités de <br>déplacements individuels par l’affiche.</p>
+
+                <h2>01.08 au<br>20.10</h2>
+
+                <div class="lieux"><p>Le Signe</p></div>
+
+                <div class="sub-header">
+
+                    <div>
+                        <p><span class="title">Commisariat</span>
+                            Virginie Vignon
+                        </p>
+                    </div>
+                    <div>
+                        <p><span class="title">Scénographie</span>
+                            Pernelle Poyet
+                        </p>
+                    </div>
+                </div>
+
+            </header>
+
+            <div class="content">
+
+                <p>L’exposition d'été du Signe, centre national du graphisme, invite à découvrir comment l'affiche s'est emparée de la question des transports et des modes de déplacement individuels à travers les affiches anciennes et contemporaines des collections de la Ville de Chaumont, tandis que les transports collectifs feront l'objet d'une exposition à part entière à l'été 2020.</p>
+                <p>De la marche à pied pratiquée depuis les origines de l'humanité jusqu'à l'automobile reine de la fin du XXe siècle, en passant par le cheval ou le vélo, les moyens de locomotions individuels, qu'ils soient musculaires ou motorisés, répondent à des besoins et soulèvent des enjeux que les affichistes ont su révéler : la vitesse, les infrastructures, la santé et l'environnement, les loisirs et le tourisme sont autant de questions abordées dans le parcours chronologique et thématique de l'exposition.</p>
+                <p>Des visites commentées de Locomotions I sont prévues les dimanches 4 et 25 août à 15h (durée 1h).</p>
+
+            </div>
+
+        </section>
+
+    </main>
+</div>
 
 <nav id="biennale">
     <ul>
