update home page 😩

--- a/index.html
+++ b/index.html
@@ -57,7 +57,14 @@
 
     <main id="home-ete">
         <div class="content affiche">
-            <div class="bar">Le Signe sera fermé<br>le jeudi 15 août !</div>
+            <div class="bar">
+                Exposition<br><br>
+                <i>De toutes façons...<br>
+                    Design graphique et textile</i><br><br>
+                    du 17 octobre<br>
+                    au 22 mars 2020<br><br>
+                    Inauguration le 18 octobre<br>
+                à partir de 18h</div>
             <div id="poster-ete"></div>
         </div>
         <div class="content edito">
